correct scrollbar issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 html, body {
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: #E6F7FF;
     height: 100%;
     display: flex;
